<resources>
    <string name="app_name">PlateRecognition</string>
    <string name="title_home">Home</string>
    <string name="title_scan">Scan</string>
    <string name="title_profile">Profile</string>
    <string name="title_account">Account</string>

    <!-- Landing Page -->
    <string name="title_menu_1">Selamat Datang di AI Plate Recognition</string>
    <string name="title_menu_2">Mendeteksi Plat Nomor Kendaraan</string>
    <string name="title_menu_3">Simulasi Pembayaran Pajak Kendaraan</string>
    <string name="title_menu_4">Ayo Mulai Menggunakan Fitur</string>
    <string name="menu_description_1">AI Plate Recoginition merupakan aplikasi berbasis android mobile dengan menggunakan machine learning untuk mendeteksi plat kendaraan (License Plate) dengan menampilkan keterangan detail dan simulasi pembayaran pajak.</string>
    <string name="menu_description_2">Dengan menggunakan model machine learning, aplikasi dapat membaca dan memproses plat nomor kendaraan dengan cukup akurat. Dengan mengunggah gambar kendaraan yang ingin diidentifikasi, lalu akan diproses oleh model dan menguraikan informasi yang terkandung dalam plat nomor tersebut.</string>
    <string name="menu_description_3">Fitur dengan pembayaran pajak melalui online dapat memudahkan pemilik kendaraan akan pemahaman yang jelas dan transparan tentang biaya pajak kendaraan mereka. Lalu ini akan mempermudah menghitung perkiraan pajak kendaraan berdasarkan berbagai faktor seperti jenis kendaraan, tahun pembuatan, kapasitas mesin, dan lainnya.</string>
    <string name="menu_description_4">Ayo mulai bergabung dan mencoba fitur yang sangat mudah digunakan dan mempermudah keseharian terhadap Pembayaran Pajak dan Dapat mengenali detail kendaraan.</string>
    <string name="get_started">Mulai</string>
    <string name="sigin_google">Continue with Google</string>
    <string name="sigin_mail">Continue with Email</string>
    <string name="text_holder">Silahkan masukkan gambar plat kendaraan</string>
    <string name="upload">Upload</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="no_permission">Don\'t have permission</string>
    <string name="choose_picture">Pilih Gambar</string>
    <string name="change_photo">Upload an image</string>
    <string name="signout">Keluar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_account">Belum Punya Akun?</string>
    <string name="register">Daftar Sekarang!</string>
    <string name="agreement_text">Dengan menekan \"Continue with Email/Google\" diatas, anda menyetujui <font color="#0099CC">Syarat dan Ketentuan </font> serta <font color="#0099CC">Kebijakan Privasi </font> dari Plate Recognition</string>
    <string name="title_login">Masuk</string>
    <string name="description_login">Silahkan masuk untuk melanjutkan</string>
    <string name="title_email">Email</string>
    <string name="hint_email">Masukkan alamat email anda</string>
    <string name="title_password">Password</string>
    <string name="hint_password">Masukkan password anda</string>
    <string name="copyright">© 2024 Muhammad Fariz Aditya Pratama</string>
    <string name="title_register">Daftar</string>
    <string name="description_register">Silahkan lengkapi data untuk mendaftar</string>
    <string name="title_name">Nama</string>
    <string name="hint_name">Masukkan nama anda</string>
    <string name="title_password_confirmation">Konfirmasi Password</string>
    <string name="hint_password_confirmation">Masukkan password anda lagi</string>
    <string name="edit_account">Edit Account</string>
    <string name="save">Simpan</string>
    <string name="title_detail">Detail Kendaraan</string>
    <string name="noPolisi">AB1111CD</string>
    <string name="deskripsi_kendaraan">%1$s - %2$s - %3$s</string>
    <string name="title_history">Histori Kendaraan</string>
    <string name="no_data">Data Tidak Ditemukan</string>
    <string name="no_history">Tidak Ada Data Histori Tersimpan</string>


</resources>