<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/scan_lyt"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.scan.ScanFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="96dp"
            app:title="@string/title_scan"
            app:titleTextAppearance="@style/header5_b" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_photo_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topAppBar"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp">

        <ImageView
            android:id="@+id/photo_holder"
            android:layout_width="350dp"
            android:layout_height="250dp"
            android:src="@drawable/camera_border" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_holder"
        style="@style/body1_m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/text_holder"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/card_photo_holder"
        app:layout_constraintStart_toStartOf="@+id/card_photo_holder"
        app:layout_constraintTop_toBottomOf="@+id/card_photo_holder" />

    <LinearLayout
        android:id="@+id/btn_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/card_photo_holder"
        app:layout_constraintStart_toStartOf="@+id/card_photo_holder"
        app:layout_constraintTop_toBottomOf="@+id/text_holder"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_camera"
            style="@style/uploadBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/camera" />

        <Button
            android:id="@+id/btn_gallery"
            style="@style/uploadBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/gallery" />

    </LinearLayout>

    <Button
        android:id="@+id/upload_button"
        style="@style/uploadBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:alpha="0"
        android:text="@string/upload"
        app:layout_constraintEnd_toEndOf="@+id/card_photo_holder"
        app:layout_constraintStart_toStartOf="@+id/card_photo_holder"
        app:layout_constraintTop_toBottomOf="@+id/btn_container" />

</androidx.constraintlayout.widget.ConstraintLayout>