<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.authentication.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/topNotch"
            android:layout_width="match_parent"
            android:layout_height="325dp"
            android:background="@drawable/top_notch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/topAppBar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@android:color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:elevation="0dp" >

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:navigationIcon="@drawable/ic_caret_left"
                    app:navigationIconTint="@color/white" />

            </com.google.android.material.appbar.AppBarLayout>

            <ImageView
                android:id="@+id/register_icon"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/undip" />

            <TextView
                android:id="@+id/registerTextView"
                style="@style/header5_sb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/register_icon"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/title_register"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/signUpTextView"
                style="@style/body2_r"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/registerTextView"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:text="@string/description_register"
                android:textColor="@color/white" />

        </RelativeLayout>

        <TextView
            android:id="@+id/title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topNotch"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            style="@style/body1_m"
            android:textColor="@color/black"
            android:text="@string/title_name"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/title_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameEditTextLayout"
                style="@style/OutlinedRoundedBox"
                app:boxBackgroundMode="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/primary_600"
                app:hintEnabled="false"
                app:startIconDrawable="@drawable/ic_user">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edName"
                    style="@style/body2_m"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="48dp"
                    android:paddingEnd="48dp"
                    android:hint="@string/hint_name"
                    android:inputType="text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_name" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/title_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_name"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            style="@style/body1_m"
            android:textColor="@color/black"
            android:text="@string/title_email"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/title_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailEditTextLayout"
                style="@style/OutlinedRoundedBox"
                app:boxBackgroundMode="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/primary_600"
                app:hintEnabled="false"
                app:startIconDrawable="@drawable/ic_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edEmail"
                    style="@style/body2_m"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="48dp"
                    android:paddingEnd="48dp"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_email" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/title_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_email"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            style="@style/body1_m"
            android:textColor="@color/black"
            android:text="@string/title_password"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/title_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordEditTextLayout"
                style="@style/OutlinedRoundedBox"
                app:boxBackgroundMode="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/primary_600"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_password"
                app:startIconDrawable="@drawable/ic_lock"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edPassword"
                    style="@style/body2_m"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="48dp"
                    android:paddingEnd="48dp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_password" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/title_password_confirmation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_password"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            style="@style/body1_m"
            android:textColor="@color/black"
            android:text="@string/title_password_confirmation"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_password_confirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/title_password_confirmation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordConfirmationEditTextLayout"
                style="@style/OutlinedRoundedBox"
                app:boxBackgroundMode="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/primary_600"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_password"
                app:startIconDrawable="@drawable/ic_lock"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edPasswordConfirmation"
                    style="@style/body2_m"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="48dp"
                    android:paddingEnd="48dp"
                    android:hint="@string/hint_password_confirmation"
                    android:inputType="textPassword"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_password" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnRegister"
            style="@style/uploadBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_600"
            android:layout_marginTop="48dp"
            android:text="@string/title_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_password_confirmation" />

        <TextView
            android:id="@+id/tvCopyright"
            style="@style/caption_r"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/btnRegister"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/copyright"
            android:textColor="@color/black"
            android:textAlignment="center"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>